got local gif file to work

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <a-scene>
       <!-- Plane directly facing the camera -->
-      <a-plane position="0 2 -4" rotation="0 25 0" width="4" height="2" material="shader:gif; src:url(https://media0.giphy.com/media/xT9IgsOaEG15pWz17y/giphy.gif)"></a-plane>
+      <a-plane position="0 2 -4" rotation="0 25 0" width="4" height="2" material="shader:gif; src:url(gif/tree.gif)"></a-plane>
     </a-scene>
   </body>
 </html>
