--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   
   <body>
     <a-scene>
-      <!-- Plane directly facing the camera -->
-      <a-plane position="0 2 -4" rotation="0 25 0" width="4" height="2" material="shader:gif; src:url(gif/tree.gif)"></a-plane>
+        <a-sky color="#333"></a-sky>
+    <a-plane position="0 2 -4" rotation="0 25 0" width="4" height="2" material="shader:gif; src:url(gif/tree.gif); transparent:true;"></a-plane>
+    
     </a-scene>
   </body>
 </html>
