--- a/index.html
+++ b/index.html
@@ -2,15 +2,22 @@
 <html>
   <head>
     <title>My A-Frame Scene</title>
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://rawgit.com/mayognaise/aframe-gif-shader/master/dist/aframe-gif-shader.min.js"></script>
+
+ <!--no script source link for gif support after 1.3.0, gonna have to npm this: https://github.com/gloomcheng/aframe-gif-shader, and remember how to host a node.js site-->
   </head>
   
   <body>
     <a-scene>
         <a-sky color="#333"></a-sky>
-    <a-plane position="0 2 -4" rotation="0 25 0" width="4" height="2" material="shader:gif; src:url(gif/tree.gif); transparent:true;"></a-plane>
+    <a-plane position="0 2 -4" rotation="0 25 0" width="4" height="2" material="shader:gif; src:url(gif/tree.gif); transparent:true; opacity:.8"></a-plane>
     
+    <!-- <a-entity geometry="primitive:box;" material="shader:gif;src:url(nyancat.gif);color:green;opacity:.8"></a-entity> -->
+</a-scene>
+</body>
+
+
     </a-scene>
   </body>
 </html>
